--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   height: 100vh;
 }
 
-.btn_one i{
+.btn_one i {
   color: white;
   font-size: 30px;
   font-weight: 700;
@@ -19,7 +19,6 @@
   line-height: 60px;
   cursor: pointer;
   transition: all 0.4s linear;
-
 }
 
 .sidebarmenu {
@@ -34,7 +33,8 @@
 }
 
 .sidebarmenu .logo {
-  position: absolute;
+  /* position: absolute; */
+  /* left: 50%; */
   width: 100%;
   line-height: 60px;
   box-shadow: 0 2px 7px rgba(0, 0, 0, 0.5);
@@ -50,7 +50,7 @@
   font-size: 20px;
 }
 
-.sidebarmenu .btn_two i{
+.sidebarmenu .btn_two i {
   color: black;
   font-size: 25px;
   line-height: 60px;
@@ -58,7 +58,7 @@
   left: 220px;
   cursor: pointer;
   opacity: 0;
-transition: all 0.4s linear;
+  transition: all 0.4s linear;
 }
 
 .sidebarmenu .menu {
@@ -103,11 +103,11 @@ a {
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
 }
 
- .btn_one i:hover{
+.btn_one i:hover {
   font-size: 40px;
 }
 
- .btn_two i:hover {
+.btn_two i:hover {
   font-size: 30px;
 }
 
